# amazon_review_scrapper

./: .gitignore  CLAUDE.md  README.md  amazon_review_scraper.spec  build-macos.sh  build-windows.ps1  main.py  package-lock.json  package.json  page.html  pyproject.toml  serve_entry.py  start-server.sh
docs/: ROADMAP.md
src/extension/: LOCALES.md  README.md  background.js  content.js  extractor.js  icons.js  locales.js  manifest.json  popup.html  popup.js  review-extractor.js  scraper.js  tab-utils.js
src/models/: review.py
src/parsers/: html_parser.py
src/phase2/: server.py
src/storage/: json_storage.py
tests/: conftest.py  test_models.py  test_parser.py  test_storage.py
tests/fixtures/: B08HHQWBBZ_fallback.html  asin_from_html.html  helpful_votes.html  multi_line_body.html  multi_line_date.html  no_avp_badge.html  non_english_title.html  one_helpful_vote.html  standard_review.html
tests/js/: review-extractor.test.js
tests/js/fixtures/: captcha.html  en_css_rating_fallback.html  en_helpful_one.html  en_no_helpful.html  en_standard.html  es_helpful_una.html  es_standard.html  no_review_id.html  no_reviewer_name.html
