[project]
name = "amazon-review-scrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12",
    "fastapi>=0.104",
    "lxml>=5.0",
    "pydantic>=2.0",
    "uvicorn[standard]>=0.24",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]
